[package]
name = "countio"
version = "0.1.0"
edition = "2021"

license = "MIT"
readme = "./README.md"
description = """
The wrapper struct to enable byte counting for std::io::Read and
std::io::Write and its asynchronous variants from futures and tokio.
"""

authors = ["Oleh Martsokha <o.martsokha@gmail.com>"]
repository = "https://github.com/xwde/countio"
homepage = "https://github.com/xwde/countio"
categories = ["asynchronous"]
keywords = ["io", "async", "counter", "tokio", "futures"]

[lib]
path = "./lib.rs"

[features]
default = ["std"]
std = []
futures = ["dep:futures-io"]
tokio = ["dep:tokio"]

[dependencies]
futures-io = { version = "0.3.26", optional = true }
tokio = { version = "1.25.0", optional = true, default-features = false }

[dev-dependencies]
futures-util = { version = "0.3.26" }
futures-test = { version = "0.3.26" }
tokio = { version = "1.25.0", features = ["rt", "macros", "io-util"] }
