[package]
name = "countio"
version = "0.1.2"
edition = "2021"

license = "MIT"
readme = "./README.md"
description = """
Byte counting for std::io::{Read, Write} and
its async variants from futures and tokio.
"""

authors = ["Oleh Martsokha <o.martsokha@gmail.com>"]
repository = "https://github.com/xwde/countio"
homepage = "https://github.com/xwde/countio"
categories = ["parsing", "asynchronous"]
keywords = ["byte", "counting", "counter", "tokio", "futures"]

[lib]
path = "./lib.rs"

[features]
default = ["std"]
std = []
futures = ["dep:futures-io"]
tokio = ["dep:tokio"]

[dependencies]
futures-io = { version = "0.3.26", optional = true }
tokio = { version = "1.25.0", optional = true, default-features = false }

[dev-dependencies]
futures-util = { version = "0.3.26" }
futures-test = { version = "0.3.26" }
tokio = { version = "1.25.0", features = ["rt", "macros", "io-util"] }
